Fix footer gap

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,6 +5,11 @@
   justify-content: space-between;
 }
 
+.footer_section_title {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
 .footer_moonvalley_grid {
   display: flex;
   flex-wrap: wrap;
@@ -105,19 +110,25 @@
 }
 
 .footer_block input {
-  width: 80%;
-  height: 30px;
-  padding: 10px;
+  width: 100%;
+  height: 40px;
+  padding: 5px 15px;
   font-family: Onest;
   font-weight: 600;
   border-radius: 8px;
   border: none;
   outline: none;
+  font-size: 16px;
 }
 
 .footer_block input:focus {
-  outline: 2px solid var(--main-color);
-  border-radius: 6px;
+  outline: 1px solid var(--main-color);
+  border-radius: 8px;
+}
+
+.footer_block .main_button:hover {
+  color: white;
+  border-color: var(--main-color);
 }
 
 .iconcard {
